# GFSharp

./: CMakeLists.txt  README.org  TODO.org  example
src/: FileReader.cpp  VariableNames.txt
